<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lin15</string>
    <string name="quick_item">下拉菜单设置</string>
    <string name="color_item">选择颜色</string>
    <string name="image_item">选择图片</string>
    <string name="alpha_item">透明度 100%</string>
    <string name="background">背景</string>
    <string name="bg_mode">背景设置模式(点击设置&amp;长按复原)</string>
    <string name="mode_top">头部</string>
    <string name="mode_foot">底部</string>
    <string name="mode_full">全部</string>
    <string name="resume">复原</string>
    <string name="cancel_the_data">取消关闭移动数据确认</string>

    <string name="string_about">

        这里是lin15的说明书。\n\n

        但凡是7.0或8.0且能装XP框架的ROM大概都能设置背景图\n\n
        我并未使用资源钩子\n
        而是纯Java代码写的\n
        \n

        图片压缩功能个人认为最低就可以了\n
        所占内存是最好的一半\n
        也看不出什么差别来\n
        当然大内存用户随意\n\n

        高斯模糊你们可以随意\n
        模糊数值越大越模糊\n\n

        以下功能仅针对lineageOS15\n
        请不是lineageOS的各位不要调皮\n

        1、隐藏应用功能\n
        它的入口在lineageOS15官方桌面 -> 主屏幕设置(长按桌面空白处出现) -> 更多 -> 隐藏应用
        \n\n

        2、取消关闭移动数据时弹窗提示\n
        关闭移动数据时，将不会再有弹窗提示是否关闭，而是直接关闭\n


        我是legend\n
        一个拥有匠心的开发者\n


    </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="bg_alpha">透明度</string>

    <string name="header_heng">头部-横屏</string>

    <string name="header_shu">头部-竖屏</string>

    <string name="full_heng">全部-横屏</string>

    <string name="full_shu">全部-竖屏</string>

    <string name="setting_info">点击设置&amp;长按取消</string>

    <string name="gaoji">高级功能(捐赠版)</string>

    <string name="gaosi">高斯模糊</string>

    <string name="gao_si_value">高斯模糊半径</string>

    <string name="best">最好(大内存)</string>

    <string name="lower">最低(低内存)</string>

    <string name="quality">图片质量</string>

    <string name="shang">捐赠</string>

    <string name="about">关于</string>

    <string name="shang_info">

        为了能写出这个模块没少阅读源码\n
        也为这个头疼了好几天\n
        如果您喜欢这个模块\n
        也有一定的积蓄\n
        那就请我喝一罐阔落吧\n
        感谢\n\n
        如果您并不富裕\n
        请不要捐赠\n
        因为lin15所有功能都是免费的
        哪怕您不捐赠\n
        也一样可以使用它\n


    </string>


    <string name="determine">确定</string>

    <string name="cancel">取消</string>

    <string name="AliPay">支付宝</string>
    <string name="QQ">QQ</string>
    <string name="wechat">微信</string>

    <string name="thanks">"感谢捐赠(长按保存)"</string>

    <string name="save_info">无法获取权限，请赋予相关权限</string>

    <string name="save">保存在sdcard/lin15下了,感谢你的打赏与鼓励~</string>

    <string name="all_info1">请在竖屏状态下下拉一次通知面板到底部</string>

    <string name="all_info2">请在横屏状态下下拉一次通知面板到底部</string>

    <string name="header_info1">无法获取准确高度，请下拉一次设置面板</string>

    <string name="header_info2">无法获取准确宽度，请横屏一次后再设置</string>

    <string name="scroll">背景滚动(测试功能)</string>

    <string name="clean">重置systemUI</string>

    <string name="reset_title">关于重置systemUI</string>

    <string name="reset_content">重置systemUI意味着会主动删除systemUI里Lin15的本地数据\n
        比如用于保存各种变量的sharedPreferences以及保存过的背景图片，都会被删除掉。\n
        本功能的用意在于，用户卸载lin15后，systemUI内仍会残留lin15留下的sharedPreferences以及设置过的图片，
        如果用户不希望这些资料残留在手机内，即可使用本功能将残留的痕迹删除。注意，使用本功能后，请卸载APP后再重启手机。\n
        本功能还有另一个作用，那就是清除旧痕迹，重置所有设定，届时您的手机将会还原成从未安装过lin15的样子，一切重新开始，墙裂建议重置后重启手机\n
    </string>
    
    <string name="diyHeight">自定义设置图片高度</string>
    
    <string name="custom_height">自定义高度</string>

    <string name="edit_tip">输入0清除自定义高度</string>

    <string name="shu">竖屏高度</string>

    <string name="heng">横屏高度</string>

    <string name="slit">卷轴背景(测试功能)</string>

    <string name="tip">提示</string>

    <string name="tip_content">如果您实在无法自动获取到高度，可以尝试使用右上角菜单栏里的自定义图片高度方法，输入自定义高度后即可选择图片设置了。具体高度请自测，一般是1200~1400左右</string>

    <string name="no_width">无法获取到有效宽度，如果多次出现此信息，请旋转屏幕后再试</string>

    <string name="logs_switch">日志记录选项</string>

    <string name="logs_about">这个是可以开启xposed框架的日志\n
        用于调试与记录\n
        如果开启该日志\n
        就会产生大量日志\n
        日志的功能在于帮助开发者找到设置失效的原因\n
        如果你日常使用正常\n
        请不要打开该选项\n
        如果你无法设置上背景\n
        那么请打开它\n
        然后设置背景图片\n
        再去xposed框架里找到日志\n
        即可看到运行到哪里出了问题\n
        如果看不懂\n
        可以将日志文件发给我\n
    </string>

    <string name="jing">警告</string>

    <string name="open_log">打开日志</string>
    <string name="close_log">关闭日志</string>

    <string name="exit">退出</string>

    <string name="exit_info">xposed内尚未激活本模块\n
        请前往激活后再使用</string>

    <string name="quest">疑难解答</string>

    <string name="moduel_info">简单修改lineageOS15的小插件</string>

    <string name="is_radius">使用圆角</string>

    <string name="radius_value">圆角度数</string>


</resources>