<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/diy_height"
        android:title="@string/diyHeight"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/logs_switch"
        android:title="@string/logs_switch"
        app:showAsAction="never"
        />

    <item android:title="@string/clean"
        android:id="@+id/clean"
        app:showAsAction="never"
        />

    <item
        android:title="@string/about_this"
        android:id="@+id/panel_infos"
        app:showAsAction="never"
        />

    <item android:title="@string/about"
        android:id="@+id/about_app"
        app:showAsAction="never"
        />
</menu>